--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"eslint": "^8",
 		"eslint-config-next": "14.2.4",
 		"prettier": "^3.3.2",
+		"supabase": "^1.183.5",
 		"typescript": "^5"
 	}
 }
