--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.2.1",
-		"react-markdown": "^9.0.1"
+		"react-markdown": "^9.0.1",
+		"react-notion": "^0.10.0",
+		"react-syntax-highlighter": "^15.5.0",
+		"rehype-slug": "^6.0.0",
+		"remark-gfm": "^4.0.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/react-syntax-highlighter": "^15.5.13",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.4",
 		"prettier": "^3.3.2",
